--- a/install
+++ b/install
@@ -58,6 +58,8 @@ for i in $(seq 1 100); do curl -s -o /dev/null "http://$GATEWAY_URL/productpage"
 kubectl apply -f istio/samples/addons
 kubectl rollout status deployment/kiali -n istio-system
 
+kubectl apply -f ingress.yaml
+
 istioctl dashboard kiali
 
 
