--- a/install
+++ b/install
@@ -2,8 +2,6 @@
 
 set -e
 
-ISTIO_PATH=istio
-
 # Create cluster as per config
 k3d cluster create --config ./k3d.yaml
 
@@ -20,8 +18,12 @@ istioctl install --set profile=default -y
 
 # istioctl install --set profile=demo -y
 
+
+# Make default namespace Istio enabled
 kubectl label namespace default istio-injection=enabled
 
+
+# Deploy application
 kubectl apply -f istio/samples/bookinfo/platform/kube/bookinfo.yaml
 
 kubectl rollout status deployment/productpage-v1
@@ -32,6 +34,7 @@ kubectl rollout status deployment/reviews-v2
 kubectl rollout status deployment/reviews-v3
 
 
+# Verify if application working internally
 kubectl exec "$(kubectl get pod -l app=ratings -o jsonpath='{.items[0].metadata.name}')" -c ratings -- curl -sS productpage:9080/productpage | grep -o "<title>.*</title>"
 
 
@@ -43,7 +46,7 @@ istioctl analyze
 
 kubectl get svc istio-ingressgateway -n istio-system
 
-
+# Get URL
 export INGRESS_HOST=$(kubectl -n istio-system get service istio-ingressgateway -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
 export INGRESS_PORT=$(kubectl -n istio-system get service istio-ingressgateway -o jsonpath='{.spec.ports[?(@.name=="http2")].port}')
 export SECURE_INGRESS_PORT=$(kubectl -n istio-system get service istio-ingressgateway -o jsonpath='{.spec.ports[?(@.name=="https")].port}')
@@ -52,12 +55,16 @@ export GATEWAY_URL=$INGRESS_HOST:$INGRESS_PORT
 
 echo "http://$GATEWAY_URL/productpage"
 
+
+# Hit URL 100 times
 for i in $(seq 1 100); do curl -s -o /dev/null "http://$GATEWAY_URL/productpage"; done
 
-
+# Applying addons like Kiali and Grafana
 kubectl apply -f istio/samples/addons
+
 kubectl rollout status deployment/kiali -n istio-system
 
+# To access Grafana and Kiali
 kubectl apply -f ingress.yaml
 
 istioctl dashboard kiali
