--- a/install
+++ b/install
@@ -2,71 +2,112 @@
 
 set -e
 
-# Create cluster as per config
-k3d cluster create --config ./k3d.yaml
 
-if [ ! -d "$ISTIO_PATH" ]; then
+create_cluster() {
+    # Create cluster as per config
+    k3d cluster create --config ./k3d.yaml
+}
+
+deploy_istio() {
+    if [ ! -d "$ISTIO_PATH" ]; then
     curl -L https://istio.io/downloadIstio | sh -
     mv istio* istio
-fi
+    fi
 
-export PATH=$PWD/istio/bin:$PATH
+    export PATH=$PWD/istio/bin:$PATH
 
-istioctl profile dump default
+    istioctl profile dump default
 
-istioctl install --set profile=default -y
+    istioctl install --set profile=default -y
 
-# istioctl install --set profile=demo -y
-
-
-# Make default namespace Istio enabled
-kubectl label namespace default istio-injection=enabled
+    # istioctl install --set profile=demo -y
 
 
-# Deploy application
-kubectl apply -f istio/samples/bookinfo/platform/kube/bookinfo.yaml
-
-kubectl rollout status deployment/productpage-v1
-kubectl rollout status deployment/details-v1
-kubectl rollout status deployment/ratings-v1 
-kubectl rollout status deployment/reviews-v1 
-kubectl rollout status deployment/reviews-v2
-kubectl rollout status deployment/reviews-v3
+    # Make default namespace Istio enabled
+    kubectl label namespace default istio-injection=enabled
+}
 
 
-# Verify if application working internally
-kubectl exec "$(kubectl get pod -l app=ratings -o jsonpath='{.items[0].metadata.name}')" -c ratings -- curl -sS productpage:9080/productpage | grep -o "<title>.*</title>"
+deploy_application() {
+    # Deploy application
+    kubectl apply -f istio/samples/bookinfo/platform/kube/bookinfo.yaml
+
+    kubectl rollout status deployment/productpage-v1
+    kubectl rollout status deployment/details-v1
+    kubectl rollout status deployment/ratings-v1 
+    kubectl rollout status deployment/reviews-v1 
+    kubectl rollout status deployment/reviews-v2
+    kubectl rollout status deployment/reviews-v3
 
 
-kubectl apply -f istio/samples/bookinfo/networking/bookinfo-gateway.yaml
-# Can use default ingress as well
-# kubectl apply -f ingress.yaml
-
-istioctl analyze
-
-kubectl get svc istio-ingressgateway -n istio-system
-
-# Get URL
-export INGRESS_HOST=$(kubectl -n istio-system get service istio-ingressgateway -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
-export INGRESS_PORT=$(kubectl -n istio-system get service istio-ingressgateway -o jsonpath='{.spec.ports[?(@.name=="http2")].port}')
-export SECURE_INGRESS_PORT=$(kubectl -n istio-system get service istio-ingressgateway -o jsonpath='{.spec.ports[?(@.name=="https")].port}')
-
-export GATEWAY_URL=$INGRESS_HOST:$INGRESS_PORT
-
-echo "http://$GATEWAY_URL/productpage"
+    # Verify if application working internally
+    kubectl exec "$(kubectl get pod -l app=ratings -o jsonpath='{.items[0].metadata.name}')" -c ratings -- curl -sS productpage:9080/productpage | grep -o "<title>.*</title>"
 
 
-# Hit URL 100 times
-for i in $(seq 1 100); do curl -s -o /dev/null "http://$GATEWAY_URL/productpage"; done
+    kubectl apply -f istio/samples/bookinfo/networking/bookinfo-gateway.yaml
+    # Can use default ingress as well
+    # kubectl apply -f ingress.yaml
 
-# Applying addons like Kiali and Grafana
-kubectl apply -f istio/samples/addons
+    istioctl analyze
 
-kubectl rollout status deployment/kiali -n istio-system
+    kubectl get svc istio-ingressgateway -n istio-system
 
-# To access Grafana and Kiali
-kubectl apply -f ingress.yaml
+    # Get URL
+    export INGRESS_HOST=$(kubectl -n istio-system get service istio-ingressgateway -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+    export INGRESS_PORT=$(kubectl -n istio-system get service istio-ingressgateway -o jsonpath='{.spec.ports[?(@.name=="http2")].port}')
+    export SECURE_INGRESS_PORT=$(kubectl -n istio-system get service istio-ingressgateway -o jsonpath='{.spec.ports[?(@.name=="https")].port}')
 
-istioctl dashboard kiali
+    export GATEWAY_URL=$INGRESS_HOST:$INGRESS_PORT
+
+    echo "http://$GATEWAY_URL/productpage"
+
+}
+
+deploy_addons() {
+
+    # Applying addons like Kiali and Grafana
+    kubectl apply -f istio/samples/addons
+
+    # Hit URL 100 times
+    for i in $(seq 1 100); do curl -s -o /dev/null "http://$GATEWAY_URL/productpage"; done
+
+    kubectl rollout status deployment/kiali -n istio-system
+
+    # To access Grafana and Kiali
+    kubectl apply -f ingress.yaml
+}
 
 
+
+
+showInfo() {
+    echo ""
+    echo ""
+    echo "Application URL"
+    export INGRESS_HOST=$(kubectl -n istio-system get service istio-ingressgateway -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+    export INGRESS_PORT=$(kubectl -n istio-system get service istio-ingressgateway -o jsonpath='{.spec.ports[?(@.name=="http2")].port}')
+    echo $INGRESS_HOST:$INGRESS_PORT
+    echo "-----"
+
+    echo "Grafana URL"
+    echo "http://localhost:8080"
+    echo "-----"
+
+    echo "Kiali URL"
+    echo "http://localhost:8080/kiali"
+    echo "-----"
+
+    echo ""
+    echo ""
+}
+
+main() {
+  create_cluster
+  deploy_istio
+  deploy_application
+  deploy_addons
+  showInfo
+}
+
+
+main
